--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -41,6 +41,20 @@ body {font-family: 'ChihayaJunP';
 
 .aspect-ratio {
   position: relative;
-  width: 200px; /* 固定幅 */
-  padding-top: 100%; /* 正方形のアスペクト比 (1:1) */
+  width: 200px;
+  padding-top: 100%;
+}
+
+.btn-image {
+  display: flex;
+  align-items: center;
+  justify-content: center; 
+  width: 100px; 
+  height: 41px;
+  border-radius: 10px;
+  margin-top: 10px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 20px;
+  color: black'
 }
