--- a/app/views/okashies/index.html.erb
+++ b/app/views/okashies/index.html.erb
@@ -1,18 +1,28 @@
-<main class='container mx-auto px-5 flex flex-col items-center justify-center; display: flex; justify-content: center;'>
+<main class='container mx-auto px-5 flex flex-col items-center justify-center;'>
   <h1 style='margin-top: 50px;'> 図鑑NO. <%= @access_logs[:id] %> </h1>
   <div style="position: relative; width: 200px; height: 200px;">
   <!-- 背景画像 -->
-  <%= image_tag asset_path('100.png'), size: "300x300", alt: 'Background Image' %>
+  <%= image_tag '100.png', size: "350x300", style: 'position: absolute; top: -10px; left: -70px;' %>
 
   <!-- 上に重ねる画像 -->
-  <%= image_tag @access_logs[:image], size: "200x200", style: 'position: absolute; top: 0; left: 0;' %>
-  </div>
-  <h1><%= @access_logs[:name] %></h1>
-  <% if @access_logs[:price] == 0 ||  @access_logs[:price].empty? %>
-    <h1> 金額不明 </h1>
-  <% else %>
-    <h1><%= @access_logs[:price] %> 円</h1>
+  <%= link_to "https://www.google.com/search?q=#{CGI.escape(@access_logs[:name])}", target: "_blank" do %>
+    <%= image_tag @access_logs[:image], size: "200x200", style: 'position: absolute; top: 50px;' %>
   <% end %>
-  <h1>販売確認日: <%= @access_logs[:regist] %></h1>
+  </div>
+  <h1 style='position: absolute; top: 360px'><%= @access_logs[:name] %></h1>
+  <div style='margin-top: 100px'>
+    <% if @access_logs[:price] == 0 ||  @access_logs[:price].empty? %>
+      <h1> 金額不明 </h1>
+    <% else %>
+      <h1>金額: <%= @access_logs[:price] %> 円</h1>
+    <% end %>
+  </div>
+  <h1 style='margin-top: 0px'>販売確認日: <%= @access_logs[:regist] %></h1>
+  <div style="display: flex; justify-content: space-between; gap: 20px;">
+    <%= link_to 'ホームへ', root_path, class: "btn-image", style: 'background-color: #FAD7F8' %>
+    <%= link_to 'xで共有', 
+      "https://twitter.com/intent/tweet?url=https://kashi-tdbl.onrender.com/&text=#{CGI.escape("#{@access_logs[:name]}")}をGETしたぞ!!!",
+      target: '_blank', class: "btn-image", style: 'background-color: #D7E6FA' %>
+    <%= link_to '次へ', okashies_path, class: "btn-image", style: 'background-color: #99D9EA' %>
+  </div>
 </main>
-
