--- a/app/views/okashies/home.html.erb
+++ b/app/views/okashies/home.html.erb
@@ -7,4 +7,12 @@
     </div>
   </div>
   <%= link_to 'おかしをさがす', okashies_path, style: 'display: flex; justify-content: center; align-items: center; width: 149px; height: 41px; background-color: #99D9EA; border-radius: 10px; margin-top: 10px; text-align: center; text-decoration: none; font-size: 20px; color: black' %>
+  <div style='margin-top: 10px; text-align: center; line-height: 1.5; font-size: 17px;'>
+    1996年から現在までのコンビニお菓子 2760種類!!!<br>
+    ガチャガチャ感覚で色んなお菓子が出てくるぞ！<br>
+    懐かしのお菓子からマイナーなお菓子<br>
+    最新版のお菓子まで数多く揃えてます。<br>
+    画像をクリックすると検索ページに飛ぶので<br>
+    気になるお菓子を調べたり購入することもできるよ！<br>
+  </div>
 </main>
