--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,7 +14,7 @@
  *= require_self
  */
 body {font-family: 'ChihayaJunP';
-  background-color: antiquewhite;
+  background-color: #faebd7;
 }
 
 .container {
