--- a/app/views/okashies/home.html.erb
+++ b/app/views/okashies/home.html.erb
@@ -2,11 +2,11 @@
 <main class='container mx-auto px-5 flex flex-col items-center justify-center;'>
   <div style="position: relative; display: flex; justify-content: center;">
     <%= image_tag '44623789.png', size: "500x400", class: "small-image" %>
-    <div style="position: absolute; bottom: 20px; font-size: 32px; line-height: 32px;">
+    <div class='main-title'>
       コンビニお菓子図鑑
     </div>
   </div>
-  <%= link_to 'おかしをさがす', okashies_path, style: 'display: flex; justify-content: center; align-items: center; width: 149px; height: 41px; background-color: #99D9EA; border-radius: 10px; margin-top: 10px; text-align: center; text-decoration: none; font-size: 170%; color: black' %>
+  <%= link_to 'おかしをさがす', okashies_path, class: 'home-button' %>
   <div class='text'>
     1996年から現在までのコンビニお菓子<br>
     2760種類!!!<br>
@@ -14,6 +14,6 @@
     懐かしのお菓子からマイナーなお菓子<br>
     最新版のお菓子まで数多く揃えてます。<br>
     画像をクリックすると検索ページに飛ぶから<br>
-    気になるお菓子を調べたり購入することもできるよ！<br>
+    気になるお菓子を調べたり購入することもできるぞ！<br>
   </div>
 </main>
